[gd_scene load_steps=18 format=3 uid="uid://b4u85bfprv2eu"]

[ext_resource type="Texture2D" uid="uid://b36r3j4yxiama" path="res://assets/interactives/Sprites/Soda.png" id="1_41he6"]
[ext_resource type="Script" path="res://assets/collectibles/soda.gd" id="1_u418w"]
[ext_resource type="PackedScene" uid="uid://rkv88vvh4eeo" path="res://assets/enemies/scenes/majima_2.tscn" id="3_pdr08"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jw3ki"]
size = Vector3(0.201035, 0.713867, 0.227295)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa24j"]
atlas = ExtResource("1_41he6")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd8qw"]
atlas = ExtResource("1_41he6")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_germd"]
atlas = ExtResource("1_41he6")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkrie"]
atlas = ExtResource("1_41he6")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rtx0"]
atlas = ExtResource("1_41he6")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1ahy"]
atlas = ExtResource("1_41he6")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicx2"]
atlas = ExtResource("1_41he6")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_owbfx"]
atlas = ExtResource("1_41he6")
region = Rect2(512, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_jsnvn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa24j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd8qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_germd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkrie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rtx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1ahy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owbfx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lh6ug"]
height = 0.174787
radius = 0.0797746

[sub_resource type="Animation" id="Animation_33nfd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D/AnimatedSprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody3D/AnimatedSprite3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody3D/AnimatedSprite3D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_v5m8n"]
resource_name = "majima"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody3D/AnimatedSprite3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1.07951, 1), Vector3(1, 1, 1), Vector3(1, 1.07951, 1), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody3D/AnimatedSprite3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.019313, 0), Vector3(0, 0, 0), Vector3(0, 0.019313, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody3D/AnimatedSprite3D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_majima"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hjvyq"]
_data = {
"RESET": SubResource("Animation_33nfd"),
"majima": SubResource("Animation_v5m8n")
}

[node name="Soda" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.13324, 0)
script = ExtResource("1_u418w")

[node name="StaticBody3D" type="CharacterBody3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="Area3D" type="Area3D" parent="StaticBody3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00297916, 0.0216939, 0.00455852)
shape = SubResource("BoxShape3D_jw3ki")

[node name="Timer" type="Timer" parent="StaticBody3D"]
autostart = true

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="StaticBody3D"]
sprite_frames = SubResource("SpriteFrames_jsnvn")
frame = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.229207, 0)
shape = SubResource("CylinderShape3D_lh6ug")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hjvyq")
}

[node name="Majima2" parent="." instance=ExtResource("3_pdr08")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.3751, 0)
visible = false

[connection signal="body_entered" from="StaticBody3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="StaticBody3D/Timer" to="." method="_on_timer_timeout"]
